fix scrollbar

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -16,6 +16,19 @@ body {
     background: rgb(241, 247, 252);
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #666;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #ccc;
+}
+
 .container {
     display: flex;
     align-items: center;
